<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:gravity="end|bottom"
        android:padding="8dp"
        android:text="@string/_0"
        android:textSize="60sp" />

    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:text="@string/questionMark"
        android:textSize="32sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_7"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_8"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_9"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperatorButtonClick"
            android:text="@string/divide"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_4"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_5"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_6"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperatorButtonClick"
            android:text="@string/multiply"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_1"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_2"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/_3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_3"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperatorButtonClick"
            android:text="@string/minus"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/_0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onNumberButtonClick"
            android:text="@string/_0"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:onClick="onDeleteButtonClick"
            android:text="Del"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onOperatorButtonClick"
            android:text="@string/plus"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onEqualButtonClicked"
            android:text="@string/equal"
            android:textSize="32sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/clr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:onClick="onClearButtonClick"
            android:text="@string/clr"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>